[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/mesh/player.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[node name="Player" type="StaticBody" groups=["player"]]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = ExtResource( 1 )

[node name="ray1" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 2 )
enabled = true
cast_to = Vector3( 0, -2, 0 )
debug_shape_thickness = 5

[node name="ray2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 4 )
enabled = true
cast_to = Vector3( 0, -2, 0 )
debug_shape_thickness = 5

[node name="ray3" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 6 )
enabled = true
cast_to = Vector3( 0, -2, 0 )
debug_shape_thickness = 5

[node name="tw_m" type="Tween" parent="."]

[node name="tw_r" type="Tween" parent="."]
